--- a/pic1.html
+++ b/pic1.html
@@ -54,55 +54,55 @@
     </main>
 
     <footer>
-      <div class="responsive">
-        <div class="gallery">
-          <a href="pic1.html">
-            <img src="pic1/pic1_325x425.jpg" alt="Picture 1" width="600" height="400">
-          </a>
-          <div class="desc">Picture 1</div>
+       <div class="responsive">
+            <div class="gallery">
+              <a href="pic1.html">
+                <img src="pic1_325x425.jpg" alt="Picture 1" width="600" height="400">
+              </a>
+              <div class="desc">Picture 1</div>
+            </div>
+          </div>
+        
+        <div class="responsive">
+            <div class="gallery">
+              <a href="pic2.html">
+                <img src="pic2_325x425.jpg" alt="Picture 2" width="600" height="400">
+              </a>
+              <div class="desc">Picture 2</div>
+            </div>
         </div>
-      </div>
-    
-    <div class="responsive">
-        <div class="gallery">
-          <a href="pic2.html">
-            <img src="pic2/pic2_325x425.jpg" alt="Picture 2" width="600" height="400">
-          </a>
-          <div class="desc">Picture 2</div>
+        <div class="responsive">
+            <div class="gallery">
+              <a href="pic3.html">
+                <img src="pic3_325x425.jpg" alt="Picture 3" width="600" height="400">
+              </a>
+              <div class="desc">Picture 3</div>
+            </div>
         </div>
-    </div>
-    <div class="responsive">
-        <div class="gallery">
-          <a href="pic3.html">
-            <img src="pic3/pic3_325x425.jpg" alt="Picture 3" width="600" height="400">
-          </a>
-          <div class="desc">Picture 3</div>
+        <div class="responsive">
+            <div class="gallery">
+              <a href="pic4.html">
+                <img src="pic4_325x425.jpg" alt="Picture 4" width="600" height="400">
+              </a>
+              <div class="desc">Picture 4</div>
+            </div>
         </div>
-    </div>
-    <div class="responsive">
-        <div class="gallery">
-          <a href="pic4.html">
-            <img src="pic4/pic4_325x425.jpg" alt="Picture 4" width="600" height="400">
-          </a>
-          <div class="desc">Picture 4</div>
+        <div class="responsive">
+            <div class="gallery">
+              <a href="pic5.html">
+                <img src="pic5_325x425.jpg" alt="Picture 5" width="600" height="400">
+              </a>
+              <div class="desc">Picture 5</div>
+            </div>
         </div>
-    </div>
-    <div class="responsive">
-        <div class="gallery">
-          <a href="pic5.html">
-            <img src="pic5/pic5_325x425.jpg" alt="Picture 5" width="600" height="400">
-          </a>
-          <div class="desc">Picture 5</div>
+        <div class="responsive">
+            <div class="gallery">
+              <a href="pic6.html">
+                <img src="pic6_325x425.jpg" alt="Picture 6" width="600" height="400">
+              </a>
+              <div class="desc">Picture 6</div>
+            </div>
         </div>
-    </div>
-    <div class="responsive">
-        <div class="gallery">
-          <a href="pic6.html">
-            <img src="pic6/pic6_325x425.jpg" alt="Picture 6" width="600" height="400">
-          </a>
-          <div class="desc">Picture 6</div>
-        </div>
-    </div>
     </footer>
 </body>
 </html>
