--- a/pic1.html
+++ b/pic1.html
@@ -35,15 +35,15 @@
                 <div class="image">
                     <picture>
                         <source media="(max-width: 350px)" 
-                        srcset="pic1/pic1_200px.jpg">
+                        srcset="pic1_200px.jpg">
 
                         <source media="(max-width: 500px)"
-                        srcset="pic1/pic1_300px.jpg">
+                        srcset="pic1_300px.jpg">
 
                         <source media="(max-width: 650px)" 
-                        srcset="pic1/pic1_400px.jpg">
+                        srcset="pic1_400px.jpg">
 
-                        <img src="pic1/pic1.jpg" alt="Landscape">
+                        <img src="pic1.jpg" alt="Landscape">
                     </picture>
                 </div>
             
