--- a/pic2.html
+++ b/pic2.html
@@ -30,6 +30,30 @@
                 </div>
             </nav>
         </header>
+        
+            <div class="photo-site">
+                <div class="image">
+                    <picture>
+                        <source media="(max-width: 350px)" 
+                        srcset="pic2_200px.jpg">
+
+                        <source media="(max-width: 500px)"
+                        srcset="pic2_300px.jpg">
+
+                        <source media="(max-width: 650px)" 
+                        srcset="pic2_400px.jpg">
+
+                        <img src="pic2.jpg" alt="Landscape">
+                    </picture>
+                </div>
+            
+                    <div class="text">
+                        <p>This picture was taken 01.07.2021. The weather was not the best this day, but the view was great.</p>
+                    </div>
+            </div>
+    </main>
+
+    <footer>
 
             <div class="responsive">
             <div class="gallery">
