--- a/pic2.html
+++ b/pic2.html
@@ -48,7 +48,7 @@
                 </div>
             
                     <div class="text">
-                        <p>This picture was taken 01.07.2021. The weather was not the best this day, but the view was great.</p>
+                        <p>This picture was taken 05.07.2021. Delicious lunch on a summer day.</p>
                     </div>
             </div>
     </main>
