--- a/pic3.html
+++ b/pic3.html
@@ -35,15 +35,15 @@
                 <div class="image">
                     <picture>
                         <source media="(max-width: 350px)" 
-                        srcset="pic3/pic3_200px.jpg">
+                        srcset="pic3_200px.jpg">
 
                         <source media="(max-width: 500px)"
-                        srcset="pic3/pic3_300px.jpg">
+                        srcset="pic3_300px.jpg">
 
                         <source media="(max-width: 650px)" 
-                        srcset="pic3/pic3_400px.jpg">
+                        srcset="pic3_400px.jpg">
 
-                        <img src="pic3/pic3.jpg" alt="Sunset">
+                        <img src="pic3.jpg" alt="Sunset">
                     </picture>
                 </div>
             
