--- a/pic4.html
+++ b/pic4.html
@@ -35,15 +35,15 @@
                 <div class="image">
                     <picture>
                         <source media="(max-width: 350px)" 
-                        srcset="pic4/pic4_200px.jpg">
+                        srcset="pic4_200px.jpg">
 
                         <source media="(max-width: 500px)"
-                        srcset="pic4/pic4_300px.jpg">
+                        srcset="pic4_300px.jpg">
 
                         <source media="(max-width: 650px)" 
-                        srcset="pic4/pic4_400px.jpg">
+                        srcset="pic4_400px.jpg">
 
-                        <img src="pic4/pic4.jpg" alt="Landscape">
+                        <img src="pic4.jpg" alt="Landscape">
                     </picture>
                 </div>
             
