--- a/pic5.html
+++ b/pic5.html
@@ -35,15 +35,15 @@
                 <div class="image">
                     <picture>
                         <source media="(max-width: 350px)" 
-                        srcset="pic5/pic5_200px.jpg">
+                        srcset="pic5_200px.jpg">
 
                         <source media="(max-width: 500px)"
-                        srcset="pic5/pic5_300px.jpg">
+                        srcset="pic5_300px.jpg">
 
                         <source media="(max-width: 650px)" 
-                        srcset="pic5/pic5_400px.jpg">
+                        srcset="pic5_400px.jpg">
 
-                        <img src="pic5/pic5.jpg" alt="Landscape">
+                        <img src="pic5.jpg" alt="Landscape">
                     </picture>
                 </div>
             
