--- a/pic6.html
+++ b/pic6.html
@@ -35,15 +35,15 @@
                 <div class="image">
                     <picture>
                         <source media="(max-width: 350px)" 
-                        srcset="pic6/pic6_200px.jpg">
+                        srcset="pic6_200px.jpg">
 
                         <source media="(max-width: 500px)"
-                        srcset="pic6/pic6_300px.jpg">
+                        srcset="pic6_300px.jpg">
 
                         <source media="(max-width: 650px)" 
-                        srcset="pic6/pic6_400px.jpg">
+                        srcset="pic6_400px.jpg">
 
-                        <img src="pic6/pic6.jpg" alt="Landscape">
+                        <img src="pic6.jpg" alt="Landscape">
                     </picture>
                 </div>
             
